@@ -72,6 +72,7 @@ Changes for 1.5:
 
 Changes for 1.4.6:
 
+ - [ZBX-354] added support of new parameter sec|#num for str(),regexp() and iregexp() (Sasha)
  - [ZBX-351] added support of floating point values w/o zero (.12) (Sasha)
  - [ZBX-350] fixed processing in_condition under Oracle (Sasha)
  - [ZBX-348] fixed incorrect processing of large integer values for {ITEM.LASTVALUE} (Alexei)
